# actions

./: .gitignore  .ruff.toml  MODULE.bazel  README.md
.github/: actionlint.yaml
.github/workflows/: actions-cpu-e2e-test.yaml  actions-lint.yaml  benchmarking-consumer-integration-test.yaml  benchmarking-tests.yaml  buildifier-check-on-error.yml  buildifier-check.yml  culprit-finder-tests.yml  generate-dashboard-data.yaml  python-lint.yaml  python-lint.yml  run-benchmarks-e2e-test.yaml  run-benchmarks.yaml  setup-uv-python-test.yaml  test.yml  wait-for-connection-no-python.yaml  wait-for-connection-on-error-test.yaml  wait-for-connection-test.yaml  zizmor.yaml
benchmarking/: pyproject.toml  requirements.in
benchmarking/ab_analyzer/: ab_analyzer.py  ab_analyzer_lib.py  ab_analyzer_test.py
benchmarking/docs/: onboarding.md
benchmarking/e2e_test/: BUILD  run_benchmark.py  test_registry.pbtxt
benchmarking/gh_matrix_generator/: BUILD.bazel  gh_matrix_generator.py  gh_matrix_generator_lib.py  gh_matrix_generator_test.py
benchmarking/proto/: BUILD  benchmark_job.proto  benchmark_registry.proto
benchmarking/publisher/: BUILD.bazel  publish_results.py  publish_results_lib.py  publish_results_test.py
benchmarking/static_threshold_analyzer/: static_threshold_analyzer.py
benchmarking/tb_parser/: BUILD  BUILD.bazel  tb_parser.py  tb_parser_lib.py  tb_parser_test.py
benchmarking/utils/: metric_parser.py
ci_buildifier/: README.md  action.yaml
ci_clangformat/: README.md  action.yaml
ci_connection/: action.yaml  connect.ps1  connect.sh  entrypoint.ps1  get_labels.py  keepalive.py  notify_connection.py  preserve_run_state.py  setup_connection.py  utils.py  utils.sh  wait_for_connection.py  wait_for_connection.sh  wait_on_error.py
ci_dashboard/data_query/: go.mod  go.sum
culprit_finder/: .pre-commit-config.yaml  README.md  pyproject.toml
culprit_finder/src/culprit_finder/: cli.py  culprit_finder.py  culprit_finder_state.py  dry_run.py  github.py  github_client.py
culprit_finder/tests/: factories.py  test_cli.py  test_culprit_finder.py  test_culprit_finder_state.py  test_github.py  test_github_client.py
python_seed_env/: README.md
setup-uv-python/: README.md  action.yml
(+16 files in other folders)
