# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

py_library(
    name = "publish_results_lib",
    srcs = ["publish_results_lib.py"],
    deps = [
        "//benchmarking/proto:benchmark_result_py_proto",
        "@pypi//google_cloud_pubsub",
        "@pypi//protobuf",
    ],
)

py_binary(
    name = "publish_results",
    srcs = ["publish_results.py"],
    main = "publish_results.py",
    visibility = ["//visibility:public"],
    deps = [
        ":publish_results_lib",
        "@pypi//protovalidate",
    ],
)

py_test(
    name = "publish_results_test",
    srcs = ["publish_results_test.py"],
    deps = [
        ":publish_results_lib",
        "@pypi//pytest",
    ],
)
